--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   sqflite: ^2.0.3+1
   path_provider: ^2.0.11
   path: ^1.8.1
+  flutter_svg: ^1.1.5
 
 dev_dependencies:
   flutter_test:
