--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:761492499035:ios:14938299e0508972f2ed7e",
-  "FIREBASE_PROJECT_ID": "von-note",
-  "GCM_SENDER_ID": "761492499035"
+  "GOOGLE_APP_ID": "1:861396676664:ios:a127182733cef671c6f6cd",
+  "FIREBASE_PROJECT_ID": "von--note",
+  "GCM_SENDER_ID": "861396676664"
 }
