--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   firebase_core: ^1.23.0
   firebase_auth: ^3.10.0
@@ -23,6 +25,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   flutter_launcher_icons: ^0.11.0
+  intl: ^0.17.0
+
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +35,7 @@ dev_dependencies:
   test: ^1.20.0
 
 flutter:
+  generate : true
   uses-material-design: true
   assets:
     - assets/images/
